--- a/relatorio.bib
+++ b/relatorio.bib
@@ -24,7 +24,7 @@
         HOWPUBLISHED = {\url{https://www.rcsb.org/structure/1IEP}},
         NOTE = "acessado em 18/04/2018"
 }
-
+% 1
 @article{ishikawa2011binding,
   title={Binding mode prediction and inhibitor design of anti-influenza virus diketo acids targeting metalloenzyme RNA polymerase by molecular docking},
   author={Ishikawa, Yoshinobu and Fujii, Satoshi},
@@ -35,7 +35,7 @@
   year={2011},
   publisher={Biomedical Informatics Publishing Group}
 }
-
+% 2
 @article{holland1975adaptation,
   title={Adaptation in natural and artificial systems. An introductory analysis with application to biology, control, and artificial intelligence},
   author={Holland, John H},
@@ -43,7 +43,8 @@
   pages={439--444},
   year={1975}
 }
-
+% 3
+%Algoritmo genético
 @article{morris1998automated,
   title={Automated docking using a Lamarckian genetic algorithm and an empirical binding free energy function},
   author={Morris, Garrett M and Goodsell, David S and Halliday, Robert S and Huey, Ruth and Hart, William E and Belew, Richard K and Olson, Arthur J and others},
@@ -53,7 +54,8 @@
   pages={1639--1662},
   year={1998}
 }
-
+% 4
+%Anelamento recozido
 @article{kirkpatrick1984optimization,
   title={Optimization by simulated annealing: Quantitative studies},
   author={Kirkpatrick, Scott},
@@ -64,7 +66,7 @@
   year={1984},
   publisher={Springer}
 }
-
+% 5
 @article{lybrand1995ligand,
   title={Ligand—protein docking and rational drug design},
   author={Lybrand, Terry P},
@@ -75,7 +77,7 @@
   year={1995},
   publisher={Elsevier}
 }
-
+% 6
 @article{caflisch1992monte,
   title={Monte Carlo docking of oligopeptides to proteins},
   author={Caflisch, Amedeo and Niederer, Peter and Anliker, Max},
@@ -86,7 +88,7 @@
   year={1992},
   publisher={Wiley Online Library}
 }
-
+% 7
 @article{mamoshina2016applications,
   title={Applications of deep learning in biomedicine},
   author={Mamoshina, Polina and Vieira, Armando and Putin, Evgeny and Zhavoronkov, Alex},
@@ -97,7 +99,7 @@
   year={2016},
   publisher={ACS Publications}
 }
-
+% 8
 @article{korotcov2017comparison,
   title={Comparison of Deep Learning With Multiple Machine Learning Methods and Metrics Using Diverse Drug Discovery Data Sets},
   author={Korotcov, Alexandru and Tkachenko, Valery and Russo, Daniel P and Ekins, Sean},
@@ -108,7 +110,7 @@
   year={2017},
   publisher={ACS Publications}
 }
-
+% 9
 @article{kitchen2004docking,
   title={Docking and scoring in virtual screening for drug discovery: methods and applications},
   author={Kitchen, Douglas B and Decornez, H{\'e}l{\`e}ne and Furr, John R and Bajorath, J{\"u}rgen},
@@ -119,7 +121,7 @@
   year={2004},
   publisher={Nature Publishing Group}
 }
-
+% 10
 @article{trott2010autodock,
   title={AutoDock Vina: improving the speed and accuracy of docking with a new scoring function, efficient optimization, and multithreading},
   author={Trott, Oleg and Olson, Arthur J},
@@ -130,6 +132,9 @@
   year={2010},
   publisher={Wiley Online Library}
 }
+
+
+% 11
 @article{shoichet2002lead,
   title={Lead discovery using molecular docking},
   author={Shoichet, Brian K and McGovern, Susan L and Wei, Binqing and Irwin, John J},
@@ -140,6 +145,7 @@
   year={2002},
   publisher={Elsevier}
 }
+% 12
 @article{xue2015protein,
   title={Protein-protein interface predictions by data-driven methods: a review},
   author={Xue, Li C and Dobbs, Drena and Bonvin, Alexandre MJJ and Honavar, Vasant},
@@ -151,6 +157,7 @@
   publisher={NIH Public Access}
 }
 
+% 13
 @article{lima11molecular,
   title={Molecular docking of potential curcuminoids inhibitors of the NS1 protein of dengue virus},
   author={Lima, Aurineide Ribeiro and Silva, Jacilene and Bezerra, Lucas Lima and Marinho, M{\'a}rcia Machado and Marinho, Emmanuel Silva},
@@ -159,6 +166,7 @@
   pages={12}
 }
 
+% 14
 @article{pagadala2017software,
   title={Software for molecular docking: a review},
   author={Pagadala, Nataraj S and Syed, Khajamohiddin and Tuszynski, Jack},
@@ -170,6 +178,7 @@
   publisher={Springer}
 }
 
+% 15
 @article{rodrigues2012estrategias,
   title={Estrat{\'e}gias de triagem virtual no planejamento de f{\'a}rmacos},
   author={Rodrigues, Ricardo P and Mantoani, Susimaire P and de Almeida, Jonathan R and Pinsetta, Fl{\'a}vio Roberto and Semighini, Evandro P and da Silva, Vinicius B and da Silva, Carlos Henrique TP},
@@ -180,6 +189,7 @@
   year={2012}
 }
 
+% 16
 @article{sliwoski2014computational,
   title={Computational methods in drug discovery},
   author={Sliwoski, Gregory and Kothiwale, Sandeepkumar and Meiler, Jens and Lowe, Edward W},
@@ -189,4 +199,86 @@
   pages={334--395},
   year={2014},
   publisher={ASPET}
+}
+
+% 17
+% Artigo Base do TCC
+@article{ballester2010machine,
+  title={A machine learning approach to predicting protein--ligand binding affinity with applications to molecular docking},
+  author={Ballester, Pedro J and Mitchell, John BO},
+  journal={Bioinformatics},
+  volume={26},
+  number={9},
+  pages={1169--1175},
+  year={2010},
+  publisher={Oxford University Press}
+}
+% 18
+@article{khamis2015machine,
+  title={Machine learning in computational docking},
+  author={Khamis, Mohamed A and Gomaa, Walid and Ahmed, Walaa F},
+  journal={Artificial intelligence in medicine},
+  volume={63},
+  number={3},
+  pages={135--152},
+  year={2015},
+  publisher={Elsevier}
+}
+
+% 19
+% PDBBIND
+@article{wang2004pdbbind,
+  title={The PDBbind database: Collection of binding affinities for protein- ligand complexes with known three-dimensional structures},
+  author={Wang, Renxiao and Fang, Xueliang and Lu, Yipin and Wang, Shaomeng},
+  journal={Journal of medicinal chemistry},
+  volume={47},
+  number={12},
+  pages={2977--2980},
+  year={2004},
+  publisher={ACS Publications}
+}
+% Api Sklearn
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+% Origem do SVM
+@inproceedings{boser1992training,
+  title={A training algorithm for optimal margin classifiers},
+  author={Boser, Bernhard E and Guyon, Isabelle M and Vapnik, Vladimir N},
+  booktitle={Proceedings of the fifth annual workshop on Computational learning theory},
+  pages={144--152},
+  year={1992},
+  organization={ACM}
+}
+
+% Clássico Dataset de Iris
+@article{fisher1936use,
+  title={The use of multiple measurements in taxonomic problems},
+  author={Fisher, Ronald A},
+  journal={Annals of eugenics},
+  volume={7},
+  number={2},
+  pages={179--188},
+  year={1936},
+  publisher={Wiley Online Library}
+}
+
+% Explicação sobre divisão das Datasets 
+@article{cheng2009comparative,
+  title={Comparative assessment of scoring functions on a diverse test set},
+  author={Cheng, Tiejun and Li, Xun and Li, Yan and Liu, Zhihai and Wang, Renxiao},
+  journal={Journal of chemical information and modeling},
+  volume={49},
+  number={4},
+  pages={1079--1093},
+  year={2009},
+  publisher={ACS Publications}
 }
